--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lib-sachin",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://parvathi15.github.io/",
+  "homepage": "https://parvathi15.github.io/libmanagement/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
